--- a/Public/index.html
+++ b/Public/index.html
@@ -3,8 +3,17 @@
     <title>Error</title>
   </head>
   <body>
-Under Wilson's administration, the European war became an ideological mission - to make the world safe for democracy and free of dynastic rulers. When in March 1917 the U.S.-allied Czar Nicholas II was forced to abdicate and a new democratic-republican government was established in Russia under Kerenski, Wilson was elated. With the Czar gone, the war had finally become a purely ideological conflict: of good against evil. Wilson and his closest foreign policy advisors, George D. Herron and Colonel House, disliked the Germany of the Kaiser, the aristocracy, and the military elite. But they hated Austria. As Erik von Kuehnelt-Leddihn has characterized the views of Wilson and the American left, "Austria was far more wicked than Germany. It existed in contradiction of the Mazzinian principle of the national state, it had inherited many traditions as well as symbols from the Holy Roman Empire (double-headed eagle, black-gold colors, etc.); its dynasty had once ruled over Spain (another bete noire); it had led the Counter-Reformation, headed the Holy Alliance, fought against the Risorgimento, suppressed the Magyar rebellion under Kossuth (who had a monument in New York City), and morally supported the monarchical experiment in Mexico. Habsburg - the very name evoked memories of Roman Catholicism, of the Armada, the Inquisition, Metternich, Lafayette jailed at Olmuetz and Silvio Pellico in Bruenn's Spielberg fortress. Such a state had to be shattered, such a dynasty had to disappear."2
+    <p>
+    From: <a href="https://mises.org/library/introduction-democracy-god-failed">https://mises.org/library/introduction-democracy-god-failed</a>
+    </p>
+    <p>
+Under Wilson's administration, the European war became an ideological mission - to make the world safe for democracy and free of dynastic rulers. When in March 1917 the U.S.-allied Czar Nicholas II was forced to abdicate and a new democratic-republican government was established in Russia under Kerenski, Wilson was elated. With the Czar gone, the war had finally become a purely ideological conflict: of good against evil. Wilson and his closest foreign policy advisors, George D. Herron and Colonel House, disliked the Germany of the Kaiser, the aristocracy, and the military elite. But they hated Austria. As Erik von Kuehnelt-Leddihn has characterized the views of Wilson and the American left, "Austria was far more wicked than Germany. It existed in contradiction of the Mazzinian principle of the national state, it had inherited many traditions as well as symbols from the Holy Roman Empire (double-headed eagle, black-gold colors, etc.); its dynasty had once ruled over Spain (another bete noire); it had led the Counter-Reformation, headed the Holy Alliance, fought against the Risorgimento, suppressed the Magyar rebellion under Kossuth (who had a monument in New York City), and morally supported the monarchical experiment in Mexico. Habsburg - the very name evoked memories of Roman Catholicism, of the Armada, the Inquisition, Metternich, Lafayette jailed at Olmuetz and Silvio Pellico in Bruenn's Spielberg fortress. Such a state had to be shattered, such a dynasty had to disappear."
+    </p>
 
-As an increasingly ideologically motivated conflict, the war quickly degenerated into a total war. 
+    <p>
+    As an increasingly ideologically motivated conflict, the war quickly degenerated into a total war. 
+    </p>
+
+
   </body>
 </html>
